--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.11.0",
     "react-modal-video": "^2.0.1",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "autoprefixer": "latest",
